# music-bot

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml
bot/: command.py  main.py  napcat.py  settings.py  types.py
bot/api/: __init__.py  message.py
bot/plugins/: __init__.py  music.py
